Создано с помощью Colaboratory

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -12,12 +12,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "lIYdn1woOS1n"
+        "id": "lIYdn1woOS1n",
+        "outputId": "a77d0016-f370-4979-83a9-549924b2c9f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'cyber-tuber'...\n",
+            "remote: Enumerating objects: 19, done.\u001b[K\n",
+            "remote: Counting objects: 100% (19/19), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (19/19), done.\u001b[K\n",
+            "remote: Total 19 (delta 7), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (19/19), 10.79 KiB | 789.00 KiB/s, done.\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "!git clone https://github.com/D-314/cyber-tuber.git\n",
+        "!mv cyber-tuber/* .\n",
+        "!rm -rf cyber-tuber"
+      ]
     }
   ],
   "metadata": {
