расчёт хи квадрат

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -452,7 +452,7 @@
         "#@title Разделение по трём параметрам\n",
         "\n",
         "col0 = \"\\u041B\\u043E\\u043A\\u0430\\u0446\\u0438\\u044F\" #@param [\"Локация\", \"Регион\", \"Работа\", \"Образование\", \"Форма туберкулёза\", \"Исход\"]\n",
-        "norm_after_grouping = True #@param {type:\"boolean\"}\n",
+        "norm_after_grouping = False #@param {type:\"boolean\"}\n",
         "col1 = \"\\u0420\\u0430\\u0431\\u043E\\u0442\\u0430\" #@param [\"Локация\", \"Регион\", \"Работа\", \"Образование\", \"Форма туберкулёза\", \"Исход\"]\n",
         "col2 = \"\\u041E\\u0431\\u0440\\u0430\\u0437\\u043E\\u0432\\u0430\\u043D\\u0438\\u0435\" #@param [\"Локация\", \"Регион\", \"Работа\", \"Образование\", \"Форма туберкулёза\", \"Исход\"]\n",
         "\n",
