--- a/processing.ipynb
+++ b/processing.ipynb
@@ -11,6 +11,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ↓ Сначала ткнуть сюда [INIT]"
+      ],
+      "metadata": {
+        "id": "FC2dFldr3w6m"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
@@ -402,21 +411,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# [Data processing]"
+      ],
+      "metadata": {
+        "id": "22fQIWjI4Qo6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "#@title ↓ Потом ткнуть сюда (при наведении мышки появится кружочек, надо на него нажать)\n",
+        "\n",
         "# Строим два графика в разных областях графика\n",
         "fig, (ax1, ax2) = plt.subplots(nrows=2, sharex=True)\n",
         "#df.groupby('Локация')['Работа'].value_counts(normalize=True).unstack().plot(kind='bar', stacked=True, ax=ax1)\n",
         "#df.groupby('Локация')['Образование'].value_counts(normalize=True).unstack().plot(kind='bar', stacked=True, ax=ax2)\n",
         "\n",
+        "col0 = \"\\u041B\\u043E\\u043A\\u0430\\u0446\\u0438\\u044F\" #@param [\"Локация\", \"Регион\", \"Работа\", \"Образование\", \"Форма туберкулёза\", \"Вид ЛУ\", \"Исход\"]\n",
+        "col1 = \"\\u0420\\u0430\\u0431\\u043E\\u0442\\u0430\" #@param [\"Локация\", \"Регион\", \"Работа\", \"Образование\", \"Форма туберкулёза\", \"Вид ЛУ\",  \"Исход\"]\n",
+        "col2 = \"\\u041E\\u0431\\u0440\\u0430\\u0437\\u043E\\u0432\\u0430\\u043D\\u0438\\u0435\" #@param [\"Локация\", \"Регион\", \"Работа\", \"Образование\", \"Форма туберкулёза\", \"Вид ЛУ\", \"Исход\"]\n",
+        "\n",
+        "\n",
         "# Группируем данные по столбцу 'Локация'\n",
-        "grouped = df.groupby('Локация')\n",
+        "grouped = df.groupby(col0)\n",
         "\n",
         "# Получаем частоту появления значений в столбце 'Работа'\n",
-        "work_freq = grouped['Работа'].value_counts(normalize=True).unstack()*100\n",
+        "work_freq = grouped[col1].value_counts(normalize=True).unstack()*100\n",
         "\n",
         "# Получаем частоту появления значений в столбце 'Образование'\n",
-        "edu_freq = grouped['Образование'].value_counts(normalize=True).unstack()*100\n",
+        "edu_freq = grouped[col2].value_counts(normalize=True).unstack()*100\n",
         "\n",
         "# Строим первый график\n",
         "work_freq.plot(kind='bar', stacked=True, ax=ax1)\n",
@@ -448,9 +473,10 @@
           "height": 497
         },
         "id": "Ie-PK7JuBz81",
-        "outputId": "6fa0cfe7-b996-4e98-e6e3-2d1c4e6f055d"
+        "outputId": "91f68d0e-79e9-4466-94d4-3db0f92b9da9",
+        "cellView": "form"
       },
-      "execution_count": 5,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "display_data",
@@ -506,9 +532,10 @@
           "height": 1000
         },
         "id": "l3k5NCM7vvPi",
-        "outputId": "5ce5a445-d3b1-4c7c-82b0-4c89e361b150"
+        "outputId": "63715717-a465-4acd-e9b0-ee9288bcbd07",
+        "cellView": "form"
       },
-      "execution_count": 68,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "display_data",
