--- a/processing.ipynb
+++ b/processing.ipynb
@@ -13,7 +13,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ↓ Сначала ткнуть сюда [INIT]"
+        "#←(1) Сначала ткнуть сюда [INIT]\n",
+        "#↓(2) потом сюда"
       ],
       "metadata": {
         "id": "FC2dFldr3w6m"
