UI improvements & description

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -28,7 +28,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0cd77124-6d64-4454-9098-7388132ec4eb"
+        "outputId": "0cd77124-6d64-4454-9098-7388132ec4eb",
+        "cellView": "form"
       },
       "outputs": [
         {
@@ -45,6 +46,7 @@
         }
       ],
       "source": [
+        "#@title Import modules and cloning repo\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -58,19 +60,7 @@
     {
       "cell_type": "code",
       "source": [
-        "dataset = pd.read_csv(\"baza_dannykh_dlya_stati.csv\").set_index('№')"
-      ],
-      "metadata": {
-        "id": "Ar9pBfjDsONP"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import gc\n",
-        "import sys\n",
+        "#@title routine functions\n",
         "\n",
         "# Функция для поиска последней ячейки с единицей в строке (написанная силами ChatGPT :))\n",
         "def find_last_one(df_row):\n",
@@ -92,7 +82,8 @@
         "        return 'неэффективный'"
       ],
       "metadata": {
-        "id": "r3EiWzbr3WZ8"
+        "id": "r3EiWzbr3WZ8",
+        "cellView": "form"
       },
       "execution_count": 3,
       "outputs": []
@@ -100,6 +91,10 @@
     {
       "cell_type": "code",
       "source": [
+        "#@title Extracting and preparing data from initial dataset\n",
+        "\n",
+        "dataset = pd.read_csv(\"baza_dannykh_dlya_stati.csv\").set_index('№')\n",
+        "\n",
         "in_city = dataset['Житель Омска'].astype(str).apply(lambda x: 'Область' if (x[0] == '0') else 'Город' if (x[0] == '1') else np.NAN)\n",
         "\n",
         "region = dataset['Житель Омска'].astype(str)+dataset['Житель ОО'].astype(str)\n",
@@ -134,7 +129,8 @@
           "height": 455
         },
         "id": "1D7teOV13DhW",
-        "outputId": "1221b4da-3a11-45ca-bf7f-84db47ca8ba7"
+        "outputId": "1221b4da-3a11-45ca-bf7f-84db47ca8ba7",
+        "cellView": "form"
       },
       "execution_count": 56,
       "outputs": [
